# South-Park-Sucks-Now-SPSN-

./: Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  TOKENOMICS.md  hardhat.config.js  package.json
app/: page.tsx
contracts/: SPSN.sol
programs/spsn/src/: lib.rs
scripts/: deploy.js  distribute-tokens.js
test/: SPSNCoin.test.js
tests/: spsn.ts
