[package]
name = "spsn"
version = "0.1.0"
description = "SPSN - South Park Sucks Now Memecoin on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spsn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
